@@ -83,9 +83,10 @@ struct policy_user {
 #define P_A_InboundSizeLimit	17
 #define P_A_OutboundSizeLimit	18
 #define P_A_FullTrustNet        19
+#define P_A_TrustRecipients	20
 
 #define P_A_FirstAttr	        2
-#define P_A_LastAttr	        19
+#define P_A_LastAttr	        20
 /* Note: Attribute codes outside range 1..31 cause problems at policystate
          processing!  If you ever need modify these, fix the  policytest.c,
 	 and  policytest.h: struct policystate { char values[]; } array,
@@ -131,6 +132,7 @@ static char *_KA[] = {
 	"maxinsize",
 	"maxoutsize",
 	"fulltrustnet",
+	"trustrecipients",
 };
 #define KA(x) ((((x)>0)&&((x)<=P_A_LastAttr))?_KA[(x) & 0xFF]:"??")
 
