@@ -165,6 +165,7 @@ struct _tokenpair {
   { "maxinsize",	P_A_InboundSizeLimit	},
   { "maxoutsize",	P_A_OutboundSizeLimit	},
   { "fulltrustnet",	P_A_FullTrustNet	},
+  { "trustrecipients",	P_A_TrustRecipients	},
   { NULL, 0 },
 };
 
